--- a/UIAutomation/src/main/java/Config/Config.properties
+++ b/UIAutomation/src/main/java/Config/Config.properties
@@ -1,6 +1,6 @@
 browser= chrome
 
-//url=http://way2automation.com/way2auto_jquery/index.php
-url = https://www.w3schools.com/sql/sql_select.asp
+url=http://way2automation.com/way2auto_jquery/index.php
+
 username=test
 password=test
